--- a/railway.toml
+++ b/railway.toml
@@ -6,7 +6,7 @@ buildCommand = "npm install"
 startCommand = "npm run start:web"
 healthcheckPath = "/"
 healthcheckTimeout = 100
-restartPolicyType = "on-failure"
+restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 memoryLimit = "512M"
 
