--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrate": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
-    "postinstall": "npm run migrate"
+    "build": "npm install && npm run migrate"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
