--- a/railway.toml
+++ b/railway.toml
@@ -4,8 +4,8 @@ buildCommand = "npm run build"
 
 [deploy]
 startCommand = "npm run migrate && npm run start:web"
-healthcheckPath = "/"
-healthcheckTimeout = 100
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 memoryLimit = "512M"
