--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
     "build": "npm install",
-    "postbuild": "npm run migrate || true"
+    "postbuild": "echo 'Skipping migrations during build'",
+    "wait-for-db": "node scripts/wait-for-db.js",
+    "start:prod": "npm run wait-for-db && npm run migrate && npm run start:web"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
