--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:prod": "npm run wait-for-db && npm run migrate && npm run start:web"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "concurrently": "^8.2.2",
     "dotenv": "^16.0.3",
