--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
     "pg": "^8.10.0",
+    "uuid": "^11.1.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -35,4 +36,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
