--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "knex": "^2.4.2",
     "pg": "^8.10.0",
     "uuid": "^11.1.0",
+    "whatsapp-web.js": "^1.30.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
