--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
+    "moment": "^2.30.1",
+    "node-cron": "^4.1.0",
     "pg": "^8.10.0",
+    "qrcode-terminal": "^0.12.0",
     "uuid": "^11.1.0",
     "whatsapp-web.js": "^1.30.0",
     "winston": "^3.8.2"
