--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "concurrently": "^8.2.2",
+    "connect-redis": "^8.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
     "node-cron": "^4.1.0",
     "pg": "^8.10.0",
     "qrcode-terminal": "^0.12.0",
+    "redis": "^5.5.6",
     "uuid": "^11.1.0",
     "whatsapp-web.js": "^1.30.0",
     "winston": "^3.8.2"
