--- a/railway.toml
+++ b/railway.toml
@@ -4,14 +4,21 @@ buildCommand = "npm run build"
 
 [deploy]
 startCommand = "npm run start:prod"
-healthcheckPath = "/health"
-healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 memoryLimit = "512M"
 
 [services]
+[[services.web]]
+name = "web"
+command = "npm run start:web"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
+memoryLimit = "512M"
+
 [[services.workers]]
 name = "whatsapp-bot"
 command = "npm start"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 memoryLimit = "512M" 
