--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm run start:prod"
+startCommand = "npm run start:web"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 memoryLimit = "512M"
