--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "node-cron": "^4.1.0",
     "pg": "^8.10.0",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "redis": "^3.1.2",
     "uuid": "^11.1.0",
