Implement analytics charts, real-time updates, and refactor orders page for maintainability

--- a/railway.toml
+++ b/railway.toml
@@ -7,7 +7,7 @@ buildCommand = "npm run build"
 [services]
 [[services.web]]
 name = "web"
-command = "npm run start:web"
+command = "npm run start:prod"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 memoryLimit = "512M"
