Fix Railway migrations - add proper migration handling and startup scripts

--- a/railway.toml
+++ b/railway.toml
@@ -2,12 +2,15 @@
 builder = "nixpacks"
 buildCommand = "npm run build"
 
-
+[deploy]
+startCommand = "node scripts/railway-start.js"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 
 [services]
 [[services.web]]
 name = "web"
-command = "npm run start:prod"
+command = "node scripts/railway-start.js"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 memoryLimit = "512M"
