--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "dev:bot": "nodemon src/index.js",
     "dev:web": "nodemon src/server.js",
     "migrate": "knex migrate:latest",
+    "migrate:railway": "node scripts/railway-migrate.js",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
     "build": "npm install",
-    "postbuild": "echo 'Skipping migrations during build'",
+    "postbuild": "npm run migrate:railway",
     "wait-for-db": "node scripts/wait-for-db.js",
-    "start:prod": "npm run wait-for-db && npm run migrate && npm run start:web"
+    "start:prod": "npm run wait-for-db && npm run migrate:railway && npm run start:web"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
