--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postbuild": "npm run migrate:railway",
     "wait-for-db": "node scripts/wait-for-db.js",
     "start:prod": "npm run wait-for-db && npm run migrate:railway && npm run start:web",
-    "debug:env": "node debug-railway-env.js"
+    "debug:env": "node debug-railway-env.js",
+    "start:bot": "node scripts/simple-bot-start.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
