Restore original Railway-compatible config and migration setup

--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "dev:bot": "nodemon src/index.js",
     "dev:web": "nodemon src/server.js",
     "migrate": "knex migrate:latest",
-    "migrate:railway": "node scripts/railway-migrate.js",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
     "build": "npm install",
-    "postbuild": "npm run migrate:railway",
+    "postbuild": "npm run migrate",
     "wait-for-db": "node scripts/wait-for-db.js",
-    "start:prod": "npm run wait-for-db && npm run migrate:railway && npm run start:web",
+    "start:prod": "npm run migrate && npm run start:web",
     "debug:env": "node debug-railway-env.js",
     "start:bot": "node scripts/simple-bot-start.js"
   },
