--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
     "build": "npm install",
-    "postbuild": "npm run migrate",
+    "postbuild": "echo 'Skipping migrations during build'",
     "wait-for-db": "node scripts/wait-for-db.js",
-    "start:prod": "npm run migrate && npm run start:web",
-    "debug:env": "node debug-railway-env.js",
-    "start:bot": "node scripts/simple-bot-start.js"
+    "start:prod": "npm run wait-for-db && npm run migrate && npm run start:web"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
