--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^2.0.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=18.0.0"
