--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "build:static": "next build && next export"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
