--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "blob-stream": "^0.1.3",
     "bootstrap": "^5.3.2",
     "concurrently": "^8.2.2",
     "connect-redis": "^5.2.0",
@@ -28,6 +29,7 @@
     "knex": "^2.4.2",
     "moment": "^2.30.1",
     "node-cron": "^4.1.0",
+    "pdfkit": "^0.17.1",
     "pg": "^8.10.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
