--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "WhatsApp Bot for Business",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm run wait-for-db && npm run migrate && node --max-old-space-size=512 src/index.js",
-    "start:web": "node --max-old-space-size=512 src/server.js",
-    "dev": "concurrently \"nodemon src/index.js\" \"nodemon src/server.js\"",
-    "dev:bot": "nodemon src/index.js",
-    "dev:web": "nodemon src/server.js",
+    "start": "npm run wait-for-db && npm run migrate && node --max-old-space-size=512 --expose-gc src/index.js",
+    "start:web": "node --max-old-space-size=512 --expose-gc src/server.js",
+    "dev": "concurrently \"nodemon --max-old-space-size=512 --expose-gc src/index.js\" \"nodemon --max-old-space-size=512 --expose-gc src/server.js\"",
+    "dev:bot": "nodemon --max-old-space-size=512 --expose-gc src/index.js",
+    "dev:web": "nodemon --max-old-space-size=512 --expose-gc src/server.js",
     "migrate": "knex migrate:latest && echo 'Migrations completed successfully' || echo 'Migration failed'",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
     "build": "npm install",
     "wait-for-db": "node scripts/wait-for-db.js",
-    "start:prod": "npm run wait-for-db && npm run migrate && npm run start:web"
+    "start:prod": "npm run wait-for-db && npm run migrate && npm run start:web",
+    "start:optimized": "NODE_OPTIONS='--max-old-space-size=512 --expose-gc' npm run start:web"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
