--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "marked": "^16.0.0",
     "moment": "^2.30.1",
     "node-cron": "^4.1.0",
+    "openai": "^5.8.2",
     "pdfkit": "^0.17.1",
     "pg": "^8.10.0",
     "qrcode": "^1.5.3",
