fix: correct Nix package names for Chromium/Puppeteer dependencies

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,13 +6,13 @@ nixPkgs = [
   "cups",
   "libdrm",
   "libxkbcommon",
-  "libxcomposite",
-  "libxdamage",
-  "libxrandr",
+  "libXcomposite",
+  "libXdamage",
+  "libXrandr",
   "libgbm",
-  "alsa-lib",
+  "alsaLib",
   "pango",
-  "libxss",
+  "libXScrnSaver",
   "libxshmfence",
   "mesa",
   "cairo"
