fix: use alsa-lib instead of alsaLib for Nixpacks dependencies

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,7 +10,7 @@ nixPkgs = [
   "libXdamage",
   "libXrandr",
   "libgbm",
-  "alsaLib",
+  "alsa-lib",
   "pango",
   "libXScrnSaver",
   "libxshmfence",
