fix: use lowercase for libxcomposite, libxdamage, libxrandr in Nixpacks config

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,9 +6,9 @@ nixPkgs = [
   "cups",
   "libdrm",
   "libxkbcommon",
-  "libXcomposite",
-  "libXdamage",
-  "libXrandr",
+  "libxcomposite",
+  "libxdamage",
+  "libxrandr",
   "libgbm",
   "alsa-lib",
   "pango",
