chore: reduce Nixpacks dependencies to only chromium (all others are pulled in transitively)

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,4 @@
 [phases.setup]
 nixPkgs = [
-  "chromium",
-  "nss",
-  "atk",
-  "cups",
-  "libdrm",
-  "libxkbcommon",
-  "libgbm",
-  "alsa-lib",
-  "pango",
-  "libxss",
-  "mesa",
-  "cairo"
+  "chromium"
 ] 
