--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start:optimized": "NODE_OPTIONS='--max-old-space-size=512 --expose-gc' npm run start:web"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "blob-stream": "^0.1.3",
     "bootstrap": "^5.3.2",
@@ -31,6 +32,7 @@
     "marked": "^16.0.0",
     "moment": "^2.30.1",
     "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.4",
     "openai": "^5.8.2",
     "pdfkit": "^0.17.1",
     "pg": "^8.10.0",
