--- a/package.json
+++ b/package.json
@@ -33,17 +33,18 @@
     "marked": "^16.0.0",
     "moment": "^2.30.1",
     "node-cron": "^4.1.0",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.4",
     "openai": "^5.8.2",
     "pdfkit": "^0.17.1",
     "pg": "^8.10.0",
+    "pm2": "^5.3.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "redis": "^3.1.2",
     "uuid": "^11.1.0",
     "whatsapp-web.js": "^1.30.0",
-    "winston": "^3.8.2",
-    "pm2": "^5.3.0"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
