--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fuse.js": "^6.6.2",
     "knex": "^2.4.2",
     "marked": "^16.0.0",
     "moment": "^2.30.1",
