--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "marked": "^16.0.0",
     "moment": "^2.30.1",
     "node-cron": "^4.1.0",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.4",
     "openai": "^5.8.2",
