--- a/railway.toml
+++ b/railway.toml
@@ -13,7 +13,7 @@ memoryLimit = "512M"
 [[services.workers]]
 name = "whatsapp-bot"
 command = "npm start"
-healthcheckPath = "/startup"
+healthcheckPath = "/health"
 healthcheckTimeout = 300
 memoryLimit = "512M"
 
