feat: disable WhatsApp heartbeat for worker service to reduce noise

--- a/railway.toml
+++ b/railway.toml
@@ -24,4 +24,5 @@ NODE_ENV = "production"
 WEB_ONLY = "true"
 
 [[services.workers.env]]
-BOT_ONLY = "true" 
+BOT_ONLY = "true"
+DISABLE_HEARTBEAT = "true" 
