feat: add Telegram configuration options and enforce polling mode for improved reliability

--- a/railway.toml
+++ b/railway.toml
@@ -18,6 +18,7 @@ memoryLimit = "512M"
 # Environment variables
 [env]
 NODE_ENV = "production"
+TELEGRAM_FORCE_POLLING = "true"
 
 # Service-specific environment variables
 [[services.web.env]]
