refactor: streamline environment configuration and remove unnecessary logging for health checks

--- a/railway.toml
+++ b/railway.toml
@@ -2,10 +2,14 @@
 builder = "nixpacks"
 buildCommand = "npm run build"
 
+
+
 [services]
 [[services.web]]
 name = "web"
 command = "npm run start:prod"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 memoryLimit = "512M"
 
 [[services.workers]]
@@ -13,17 +17,4 @@ name = "whatsapp-bot"
 command = "npm start"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
-memoryLimit = "512M"
-
-# Environment variables
-[env]
-NODE_ENV = "production"
-TELEGRAM_FORCE_POLLING = "true"
-
-# Service-specific environment variables
-[[services.web.env]]
-WEB_ONLY = "true"
-
-[[services.workers.env]]
-BOT_ONLY = "true"
-BOT_PORT = "3001" 
+memoryLimit = "512M" 
